Switches default JPA CDI portable extension to PersistenceExtension from JpaExtension
Signed-off-by: Laird Nelson <laird.nelson@oracle.com>